--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -770,9 +770,15 @@
 
         <!-- ABOUT ======================================================-->
         <div class="tab-pane fade" id="about-pane">
-          <h1 data-i18n="[html]about#head">
-            PSIPHON: <i>BEYOND BORDERS</i>
-          </h1>
+          <div class="wordart">
+            <div class="wordart-title text-center" data-i18n="about#wordart-title">
+              Psiphon
+            </div>
+            <div class="wordart-tag text-center" data-i18n="about#wordart-tag">
+              Beyond Borders
+            </div>
+          </div>
+
           <p data-i18n="[html]about#description">
             Psiphon is a <strong>censorship circumvention tool</strong> — it is
             designed to give access to the open Internet, past censors and
