Fixed bug: Logo image didn't have correct link

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -73,7 +73,7 @@
 <body dir="ltr">
 
   <div class="psiphon-header">
-    <div class="header-nav-join" data-match-width=".main-nav">
+    <div class="header-nav-join logo" data-match-width=".main-nav">
       <a href="#">
         <img src="logo.png">
       </a>
