Added min-width on nav sidebar

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -6773,6 +6773,7 @@ body[dir="rtl"] .psiphon-header .header-nav-join {
 }
 .nav-tabs {
   background-color: #ffffff;
+  min-width: 10em;
 }
 .nav-tabs.main-nav.nav {
   border-width: 0;
@@ -14642,7 +14643,7 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 <body dir="ltr">
 
   <div class="psiphon-header">
-    <div class="header-nav-join" data-match-width=".main-nav">
+    <div class="header-nav-join logo" data-match-width=".main-nav">
       <a href="#">
         <img src="logo.png">
       </a>
