--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -750,8 +750,8 @@
           <p data-i18n="[html]about#description">
             Psiphon is a <strong>censorship circumvention tool</strong> — it is
             designed to give access to the open Internet, past censors and
-            firewalls. It is <strong>open source</strong> and developed with
-            love in Toronto, Canada.
+            firewalls. It is <strong>open source</strong> and developed in
+            Toronto, Canada.
           </p>
           <p data-i18n="[html]about#visit-download-site">
             To <strong>download a new version</strong> of Psiphon, or to
