--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -727,7 +727,9 @@
             <!-- Message template -->
             <script type="text/html" id="message-template">
               <tr data-class="priority">
-                <td data-content="message">
+                <td class="timestamp" data-content="timestamp">
+                </td>
+                <td class="message" data-content="message">
                 </td>
               </tr>
             </script>
