Fixed: click-drag could cause whole body to scroll, requiring app restart to fix

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -6814,6 +6814,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-y: hidden;
+  -ms-scroll-limit-y-max: 0;
   background-color: #f3f7fa;
 }
 * {
@@ -13359,6 +13360,9 @@ $(function() {
   // ...and now.
   resizeContent();
 
+  // We don't want buggy scrolling behaviour (which can result from some click-drag selecting)
+  initScrollFix();
+
   setTimeout(HtmlCtrlInterface_AppReady, 100);
 });
 
@@ -13382,6 +13386,15 @@ function resizeContent() {
               .css(!g_isRTL ? 'margin-right' : 'margin-left', 0);
 }
 
+// Ensures that elements that should not be scrolled are not scrolled.
+// This should only be called once.
+function initScrollFix() {
+  // It would be much better to fix this correctly using CSS rather than
+  // detecting a bad state and correcting it. But until we figure that out...
+  $('body').scroll(function() {
+    $('body').scrollTop(0);
+  });
+}
 
 /* CONNECTION ****************************************************************/
 
