Altered fonts again. Removed Titillium.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -723,6 +723,9 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </style>
   <style>
 /* MAIN.CSS IS GENERATED. EDIT MAIN.LESS. */
+body[dir="rtl"] {
+  font-family: "Tahoma", "Segoe UI", sans-serif;
+}
 body[dir="rtl"] .radio,
 body[dir="rtl"] .checkbox {
   padding-right: 20px;
@@ -974,7 +977,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: "Titillium Web", "Segoe UI", sans-serif;
+  font-family: "Segoe UI", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -1660,7 +1663,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Titillium Web", "Segoe UI", sans-serif;
+  font-family: "Segoe UI", "Tahoma", sans-serif;
 }
 label {
   display: block;
@@ -4075,7 +4078,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   margin-bottom: 0;
   padding: 4px 14px;
-  font-family: "Titillium Web", "Segoe UI", sans-serif;
+  font-family: "Segoe UI", "Tahoma", sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -7475,30 +7478,6 @@ hr.dotted {
   border-top-width: 2px;
   border-bottom-style: none;
   border-bottom-width: 0px;
-}
-/*
- * FONTS
- */
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 400;
-  src: url('TitilliumWeb-Regular.eot');
-  src: url('TitilliumWeb-Regular.eot') format('embedded-opentype'), url('TitilliumWeb-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 700;
-  src: url('TitilliumWeb-Bold.eot');
-  src: url('TitilliumWeb-Bold.eot') format('embedded-opentype'), url('TitilliumWeb-Bold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'Titillium Web';
-  font-style: normal;
-  font-weight: 900;
-  src: url('TitilliumWeb-Black.eot');
-  src: url('TitilliumWeb-Black.eot') format('embedded-opentype'), url('TitilliumWeb-Black.ttf') format('truetype');
 }
 
 </style>
