--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -11872,6 +11872,13 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#visit-download-site": "[Ŧǿǿ <strong>ḓǿǿẇƞŀǿǿȧȧḓ ȧȧ ƞḗḗẇ ṽḗḗřşīīǿǿƞ</strong> ǿǿƒ Ƥşīīƥħǿǿƞ, ǿǿř ŧǿǿ <strong>ɠḗḗŧ ħḗḗŀƥ ȧȧƞḓ ḿǿǿřḗḗ īīƞƒǿǿřḿȧȧŧīīǿǿƞ</strong>, ƥŀḗḗȧȧşḗḗ <a href=\"#\" class=\"InfoURL\">ṽīīşīīŧ ŧħḗḗ ẇḗḗƀşīīŧḗḗ</a>.]",
       "about#wordart-tag": "[Ɓḗḗẏǿǿƞḓ Ɓǿǿřḓḗḗřş]",
       "about#wordart-title": "[Ƥşīīƥħǿǿƞ]",
+      "appbackend#minimized-to-systray-body": "[Ƈŀīīƈķ ŧħḗḗ īīƈǿǿƞ ŧǿǿ řḗḗşŧǿǿřḗḗ ŧħḗḗ ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ]",
+      "appbackend#minimized-to-systray-title": "[Ƥşīīƥħǿǿƞ ħȧȧş ƀḗḗḗḗƞ ḿīīƞīīḿīīẑḗḗḓ ŧǿǿ ŧħḗḗ ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ ȧȧřḗḗȧȧ]",
+      "appbackend#state-connected-body": "[Ƞǿǿẇ ɠǿǿ şŭŭřƒ ƒřḗḗḗḗŀẏ!]",
+      "appbackend#state-connected-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧḗḗḓ]",
+      "appbackend#state-starting-body": "[Ƥŀḗḗȧȧşḗḗ ẇȧȧīīŧ]",
+      "appbackend#state-starting-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧīīƞɠ…]",
+      "appbackend#state-stopped-title": "[Ƥşīīƥħǿǿƞ īīş ḓīīşƈǿǿƞƞḗḗƈŧḗḗḓ]",
       "banner#long-connecting": "[<strong>Ǿǿħ ƞǿǿ!</strong> Ẏǿǿŭŭ şḗḗḗḗḿ ŧǿǿ ƀḗḗ ħȧȧṽīīƞɠ ŧřǿǿŭŭƀŀḗḗ ƈǿǿƞƞḗḗƈŧīīƞɠ!<br>\nḒǿǿẇƞŀǿǿȧȧḓ ŧħḗḗ ŀȧȧŧḗḗşŧ ṽḗḗřşīīǿǿƞ ǿǿƒ Ƥşīīƥħǿǿƞ ƒřǿǿḿ ŧħḗḗ <a class=\"NewVersionURL\" href=\"#\">ḓǿǿẇƞŀǿǿȧȧḓ şīīŧḗḗ</a>\nǿǿř ƀẏ şḗḗƞḓīīƞɠ ȧȧƞ ḗḗḿȧȧīīŀ ŧǿǿ <a class=\"NewVersionEmail\" href=\"#\"></a>]",
       "banner#sponsored-by": "[Şƥǿǿƞşǿǿřḗḗḓ ƀẏ]",
       "connection#connect-btn": "[Ƈǿǿƞƞḗḗƈŧ]",
@@ -11956,6 +11963,13 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#visit-download-site": "‮⊥o‬ <strong>‮poʍuʅoɐp‬ ‮ɐ‬ ‮uǝʍ‬ ‮ʌǝɹsıou‬</strong> ‮oɟ‬ ‮Ԁsıdɥou‬, ‮oɹ‬ ‮ʇo‬ <strong>‮ƃǝʇ‬ ‮ɥǝʅd‬ ‮ɐup‬ ‮ɯoɹǝ‬ ‮ıuɟoɹɯɐʇıou‬</strong>, ‮dʅǝɐsǝ‬ <a href=\"#\" class=\"InfoURL\">‮ʌısıʇ‬ ‮ʇɥǝ‬ ‮ʍǝqsıʇǝ‬</a>.",
       "about#wordart-tag": "‮Ԑǝʎoup‬ ‮Ԑoɹpǝɹs‬",
       "about#wordart-title": "‮Ԁsıdɥou‬",
+      "appbackend#minimized-to-systray-body": "‮Ↄʅıɔʞ‬ ‮ʇɥǝ‬ ‮ıɔou‬ ‮ʇo‬ ‮ɹǝsʇoɹǝ‬ ‮ʇɥǝ‬ ‮ɐddʅıɔɐʇıou‬",
+      "appbackend#minimized-to-systray-title": "‮Ԁsıdɥou‬ ‮ɥɐs‬ ‮qǝǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬",
+      "appbackend#state-connected-body": "‮Noʍ‬ ‮ƃo‬ ‮snɹɟ‬ ‮ɟɹǝǝʅʎ‬!",
+      "appbackend#state-connected-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
+      "appbackend#state-starting-body": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬",
+      "appbackend#state-starting-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬…",
+      "appbackend#state-stopped-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮pısɔouuǝɔʇǝp‬",
       "banner#long-connecting": "<strong>‮Oɥ‬ ‮uo‬!</strong> ‮ʎon‬ ‮sǝǝɯ‬ ‮ʇo‬ ‮qǝ‬ ‮ɥɐʌıuƃ‬ ‮ʇɹonqʅǝ‬ ‮ɔouuǝɔʇıuƃ‬!<br>\n‮poʍuʅoɐp‬ ‮ʇɥǝ‬ ‮ʅɐʇǝsʇ‬ ‮ʌǝɹsıou‬ ‮oɟ‬ ‮Ԁsıdɥou‬ ‮ɟɹoɯ‬ ‮ʇɥǝ‬ <a class=\"NewVersionURL\" href=\"#\">‮poʍuʅoɐp‬ ‮sıʇǝ‬</a>\n‮oɹ‬ ‮qʎ‬ ‮sǝupıuƃ‬ ‮ɐu‬ ‮ǝɯɐıʅ‬ ‮ʇo‬ <a class=\"NewVersionEmail\" href=\"#\"></a>",
       "banner#sponsored-by": "‮Sdousoɹǝp‬ ‮qʎ‬",
       "connection#connect-btn": "‮Ↄouuǝɔʇ‬",
@@ -12197,7 +12211,14 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#description": "Psiphon is a <strong>censorship circumvention tool</strong> — it is designed to give access to the open Internet, past censors and firewalls. It is <strong>open source</strong> and developed in Toronto, Canada.",
       "about#visit-download-site": "To <strong>download a new version</strong> of Psiphon, or to <strong>get help and more information</strong>, please <a href=\"#\" class=\"InfoURL\">visit the website</a>.",
       "about#get-by-email": "<strong>If the website is inaccessible</strong>, you can get a new version of Psiphon by sending an email to:",
-      "general#modal-close-button": "Close"
+      "general#modal-close-button": "Close",
+      "appbackend#state-stopped-title": "Psiphon is disconnected",
+      "appbackend#state-starting-title": "Psiphon is connecting…",
+      "appbackend#state-starting-body": "Please wait",
+      "appbackend#state-connected-title": "Psiphon is connected",
+      "appbackend#state-connected-body": "Explore beyond your borders!",
+      "appbackend#minimized-to-systray-title": "Psiphon has been minimized to the notification area",
+      "appbackend#minimized-to-systray-body": "Click the icon to restore the application"
     }
   },
   "es": {
@@ -14391,6 +14412,25 @@ function switchLocale(locale, initial) {
       $(this).toggleClass(rtlClasses, rtl);
     }
   });
+
+  //
+  // Update C code string table with new language values
+  //
+
+  // Iterate through the English keys, since we know it will be complete.
+  var translation = window.PSIPHON.LOCALES.en.translation;
+  var appBackendStringTable = {};
+  for (var key in translation) {
+    if (!translation.hasOwnProperty(key)) {
+      continue;
+    }
+
+    if (key.indexOf('appbackend#') === 0) {
+      appBackendStringTable[key] = i18n.t(key);
+    }
+  }
+
+  HtmlCtrlInterface_AddStringTableItem(appBackendStringTable);
 }
 
 function populateLocales() {
@@ -14618,8 +14658,12 @@ $(function() {
     return;
   }
 
-  // Make the connect button "work"
+  // Make the connect button "work" in browser mode
   $('#connect-toggle a').click(function(e) {
+    if (!IS_BROWSER) {
+      return;
+    }
+
     e.preventDefault();
     var buttonConnectState = $(this).parents('.connect-toggle-content').data('connect-state');
     if (buttonConnectState === 'stopped') {
@@ -14704,16 +14748,16 @@ var PSIPHON_LINK_PREFIX = 'psi:';
 
 // Add new status message.
 function HtmlCtrlInterface_AddMessage(jsonArgs) {
-  setTimeout(function() {
+  nextTick(function() {
     // Allow object as input to assist with debugging
     var args = (typeof(jsonArgs) === 'object') ? jsonArgs : JSON.parse(jsonArgs);
     addLogMessage(args);
-  }, 1);
+  });
 }
 
 // Add new notice. This may be interpreted and acted upon.
 function HtmlCtrlInterface_AddNotice(jsonArgs) {
-  setTimeout(function() {
+  nextTick(function() {
     // Allow object as input to assist with debugging
     var args = (typeof(jsonArgs) === 'object') ? jsonArgs : JSON.parse(jsonArgs);
     if (args.noticeType === 'UpstreamProxyError') {
@@ -14729,7 +14773,7 @@ function HtmlCtrlInterface_AddNotice(jsonArgs) {
       // Update the UI.
       updateAvailableEgressRegions(true);
     }
-  }, 1);
+  });
 }
 
 // Set the connected state.
@@ -14754,17 +14798,17 @@ function HtmlCtrlInterface_SetState(jsonArgs) {
 
 // Refresh the current settings values.
 function HtmlCtrlInterface_RefreshSettings(jsonArgs) {
-  setTimeout(function() {
+  nextTick(function() {
     var args = JSON.parse(jsonArgs);
     refreshSettings(args);
-  }, 1);
+  });
 }
 
 /* Calls from JS code to C code. */
 
 // Let the C code know that the UI is ready.
 function HtmlCtrlInterface_AppReady() {
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'ready';
     if (IS_BROWSER) {
       console.log(appURL);
@@ -14772,7 +14816,37 @@ function HtmlCtrlInterface_AppReady() {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
+}
+
+// Give the C code a string table entry in the appropriate language.
+// The `stringtable` can and should be a full set of key:string mappings, but
+// the strings will be sent to the C code one at a time, to prevent URL size
+// overflow.
+function HtmlCtrlInterface_AddStringTableItem(stringtable) {
+  for (var key in stringtable) {
+    if (!stringtable.hasOwnProperty(key)) {
+      continue;
+    }
+
+    var item = {
+      key: key,
+      string: stringtable[key]
+    };
+    sendStringTableItem(item);
+  }
+
+  function sendStringTableItem(itemObj) {
+    nextTick(function() {
+      var appURL = PSIPHON_LINK_PREFIX + 'stringtable?' + encodeURIComponent(JSON.stringify(itemObj));
+      if (IS_BROWSER) {
+        console.log(decodeURIComponent(appURL));
+      }
+      else {
+        window.location = appURL;
+      }
+    });
+  }
 }
 
 // Connection should start.
@@ -14781,7 +14855,7 @@ function HtmlCtrlInterface_Start() {
   if (g_lastState === 'starting' || g_lastState === 'connected') {
     return;
   }
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'start';
     if (IS_BROWSER) {
       console.log(appURL);
@@ -14789,7 +14863,7 @@ function HtmlCtrlInterface_Start() {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 // Connection should stop.
@@ -14798,7 +14872,7 @@ function HtmlCtrlInterface_Stop() {
   if (g_lastState === 'stopping' || g_lastState === 'disconnected') {
     return;
   }
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'stop';
     if (IS_BROWSER) {
       console.log(appURL);
@@ -14806,12 +14880,12 @@ function HtmlCtrlInterface_Stop() {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 // Settings should be saved.
 function HtmlCtrlInterface_SaveSettings(settingsJSON) {
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'savesettings?' + encodeURIComponent(settingsJSON);
     if (IS_BROWSER) {
       console.log(decodeURIComponent(appURL));
@@ -14820,12 +14894,12 @@ function HtmlCtrlInterface_SaveSettings(settingsJSON) {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 // Feedback should be sent.
 function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'sendfeedback?' + encodeURIComponent(feedbackJSON);
     if (IS_BROWSER) {
       console.log(decodeURIComponent(appURL));
@@ -14833,12 +14907,12 @@ function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 // Cookies (i.e., UI settings) should be saved.
 function HtmlCtrlInterface_SetCookies(cookiesJSON) {
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'setcookies?' + encodeURIComponent(cookiesJSON);
     if (IS_BROWSER) {
       console.log(decodeURIComponent(appURL));
@@ -14846,12 +14920,12 @@ function HtmlCtrlInterface_SetCookies(cookiesJSON) {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 // Banner was clicked.
 function HtmlCtrlInterface_BannerClick() {
-  setTimeout(function() {
+  nextTick(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'bannerclick';
     if (IS_BROWSER) {
       console.log(decodeURIComponent(appURL));
@@ -14860,7 +14934,7 @@ function HtmlCtrlInterface_BannerClick() {
     else {
       window.location = appURL;
     }
-  }, 1);
+  });
 }
 
 
