Added minimize-to-systray option

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -11874,10 +11874,10 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#wordart-title": "[Ƥşīīƥħǿǿƞ]",
       "appbackend#minimized-to-systray-body": "[Ƈŀīīƈķ ŧħḗḗ īīƈǿǿƞ ŧǿǿ řḗḗşŧǿǿřḗḗ ŧħḗḗ ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ]",
       "appbackend#minimized-to-systray-title": "[Ƥşīīƥħǿǿƞ ħȧȧş ƀḗḗḗḗƞ ḿīīƞīīḿīīẑḗḗḓ ŧǿǿ ŧħḗḗ ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ ȧȧřḗḗȧȧ]",
-      "appbackend#state-connected-body": "[Ƞǿǿẇ ɠǿǿ şŭŭřƒ ƒřḗḗḗḗŀẏ!]",
+      "appbackend#state-connected-body": "[Ḗḗẋƥŀǿǿřḗḗ ƀḗḗẏǿǿƞḓ ẏǿǿŭŭř ƀǿǿřḓḗḗřş!]",
       "appbackend#state-connected-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧḗḗḓ]",
-      "appbackend#state-starting-body": "[Ƥŀḗḗȧȧşḗḗ ẇȧȧīīŧ]",
-      "appbackend#state-starting-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧīīƞɠ…]",
+      "appbackend#state-starting-body": "[Ƥŀḗḗȧȧşḗḗ ẇȧȧīīŧ…]",
+      "appbackend#state-starting-title": "[Ƥşīīƥħǿǿƞ īīş ƈǿǿƞƞḗḗƈŧīīƞɠ]",
       "appbackend#state-stopped-title": "[Ƥşīīƥħǿǿƞ īīş ḓīīşƈǿǿƞƞḗḗƈŧḗḗḓ]",
       "banner#long-connecting": "[<strong>Ǿǿħ ƞǿǿ!</strong> Ẏǿǿŭŭ şḗḗḗḗḿ ŧǿǿ ƀḗḗ ħȧȧṽīīƞɠ ŧřǿǿŭŭƀŀḗḗ ƈǿǿƞƞḗḗƈŧīīƞɠ!<br>\nḒǿǿẇƞŀǿǿȧȧḓ ŧħḗḗ ŀȧȧŧḗḗşŧ ṽḗḗřşīīǿǿƞ ǿǿƒ Ƥşīīƥħǿǿƞ ƒřǿǿḿ ŧħḗḗ <a class=\"NewVersionURL\" href=\"#\">ḓǿǿẇƞŀǿǿȧȧḓ şīīŧḗḗ</a>\nǿǿř ƀẏ şḗḗƞḓīīƞɠ ȧȧƞ ḗḗḿȧȧīīŀ ŧǿǿ <a class=\"NewVersionEmail\" href=\"#\"></a>]",
       "banner#sponsored-by": "[Şƥǿǿƞşǿǿřḗḗḓ ƀẏ]",
@@ -11938,6 +11938,9 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#split-tunnel#enable-label": "[Ḓǿǿƞ'ŧ ƥřǿǿẋẏ ẇḗḗƀşīīŧḗḗş ẇīīŧħīīƞ ẏǿǿŭŭř ƈǿǿŭŭƞŧřẏ]",
       "settings#split-tunnel#heading": "[Şƥŀīīŧ Ŧŭŭƞƞḗḗŀ]",
       "settings#split-tunnel#help-text": "[Īīƒ ḗḗƞȧȧƀŀḗḗḓ, řḗḗɋŭŭḗḗşŧş ḿȧȧḓḗḗ ŧǿǿ şḗḗřṽḗḗřş ẇīīŧħīīƞ ẏǿǿŭŭř ħǿǿḿḗḗ ƈǿǿŭŭƞŧřẏ ẇīīŀŀ ƞǿǿŧ ƀḗḗ ŧŭŭƞƞḗḗŀḗḗḓ ŧħřǿǿŭŭɠħ Ƥşīīƥħǿǿƞ.]",
+      "settings#systray-minimize#enable-label": "[Ḿīīƞīīḿīīẑḗḗ ŧǿǿ ŧħḗḗ ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ ȧȧřḗḗȧȧ (şẏşŧḗḗḿ ŧřȧȧẏ)]",
+      "settings#systray-minimize#heading": "[Ḿīīƞīīḿīīẑḗḗ ŧǿǿ Ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ Ȧȧřḗḗȧȧ (Şẏşŧḗḗḿ Ŧřȧȧẏ)]",
+      "settings#systray-minimize#help-text": "[Īīƒ ḗḗƞȧȧƀŀḗḗḓ, ẇħḗḗƞ ḿīīƞīīḿīīẑḗḗḓ ŧħḗḗ Ƥşīīƥħǿǿƞ ȧȧƥƥŀīīƈȧȧŧīīǿǿƞ ẇīīƞḓǿǿẇ ẇīīŀŀ ħīīḓḗḗ īīƞ ŧħḗḗ ƞǿǿŧīīƒīīƈȧȧŧīīǿǿƞ ȧȧřḗḗȧȧ (ȧȧŀşǿǿ ķƞǿǿẇƞ ȧȧş ŧħḗḗ “şẏşŧḗḗḿ ŧřȧȧẏ” ǿǿř “şẏşŧřȧȧẏ”, ŀǿǿƈȧȧŧḗḗḓ ƞḗḗȧȧř ŧħḗḗ ƈŀǿǿƈķ ǿǿƞ ẏǿǿŭŭř Ẇīīƞḓǿǿẇş ŧȧȧşķ ƀȧȧř).]",
       "settings#transport-mode#check-label": "[Ŭŭşḗḗ ṼƤȠ Ḿǿǿḓḗḗ]",
       "settings#transport-mode#heading": "[Ŧřȧȧƞşƥǿǿřŧ Ḿǿǿḓḗḗ]",
       "settings#transport-mode#help-text": "[Ŭŭşḗḗş Ẇīīƞḓǿǿẇş ĪīƤŞḗḗƈ/Ŀ2ŦƤ ṼƤȠ. Ŧħīīş ḿǿǿḓḗḗ ẇīīŀŀ ŧŭŭƞƞḗḗŀ ȧȧŀŀ ẏǿǿŭŭř ȧȧƥƥş, ƀŭŭŧ īīŧ ḓǿǿḗḗşƞ'ŧ ƥřǿǿṽīīḓḗḗ ǿǿƀƒŭŭşƈȧȧŧīīǿǿƞ. Īīŧ īīş <strong>ƞǿǿŧ řḗḗƈǿǿḿḿḗḗƞḓḗḗḓ</strong> ƒǿǿř ƀẏƥȧȧşşīīƞɠ ḿǿǿşŧ ƒīīřḗḗẇȧȧŀŀş.]",
@@ -11965,10 +11968,10 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#wordart-title": "‮Ԁsıdɥou‬",
       "appbackend#minimized-to-systray-body": "‮Ↄʅıɔʞ‬ ‮ʇɥǝ‬ ‮ıɔou‬ ‮ʇo‬ ‮ɹǝsʇoɹǝ‬ ‮ʇɥǝ‬ ‮ɐddʅıɔɐʇıou‬",
       "appbackend#minimized-to-systray-title": "‮Ԁsıdɥou‬ ‮ɥɐs‬ ‮qǝǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬",
-      "appbackend#state-connected-body": "‮Noʍ‬ ‮ƃo‬ ‮snɹɟ‬ ‮ɟɹǝǝʅʎ‬!",
+      "appbackend#state-connected-body": "‮Ǝxdʅoɹǝ‬ ‮qǝʎoup‬ ‮ʎonɹ‬ ‮qoɹpǝɹs‬!",
       "appbackend#state-connected-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇǝp‬",
-      "appbackend#state-starting-body": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬",
-      "appbackend#state-starting-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬…",
+      "appbackend#state-starting-body": "‮Ԁʅǝɐsǝ‬ ‮ʍɐıʇ‬…",
+      "appbackend#state-starting-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮ɔouuǝɔʇıuƃ‬",
       "appbackend#state-stopped-title": "‮Ԁsıdɥou‬ ‮ıs‬ ‮pısɔouuǝɔʇǝp‬",
       "banner#long-connecting": "<strong>‮Oɥ‬ ‮uo‬!</strong> ‮ʎon‬ ‮sǝǝɯ‬ ‮ʇo‬ ‮qǝ‬ ‮ɥɐʌıuƃ‬ ‮ʇɹonqʅǝ‬ ‮ɔouuǝɔʇıuƃ‬!<br>\n‮poʍuʅoɐp‬ ‮ʇɥǝ‬ ‮ʅɐʇǝsʇ‬ ‮ʌǝɹsıou‬ ‮oɟ‬ ‮Ԁsıdɥou‬ ‮ɟɹoɯ‬ ‮ʇɥǝ‬ <a class=\"NewVersionURL\" href=\"#\">‮poʍuʅoɐp‬ ‮sıʇǝ‬</a>\n‮oɹ‬ ‮qʎ‬ ‮sǝupıuƃ‬ ‮ɐu‬ ‮ǝɯɐıʅ‬ ‮ʇo‬ <a class=\"NewVersionEmail\" href=\"#\"></a>",
       "banner#sponsored-by": "‮Sdousoɹǝp‬ ‮qʎ‬",
@@ -12029,6 +12032,9 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#split-tunnel#enable-label": "‮pou‬'‮ʇ‬ ‮dɹoxʎ‬ ‮ʍǝqsıʇǝs‬ ‮ʍıʇɥıu‬ ‮ʎonɹ‬ ‮ɔonuʇɹʎ‬",
       "settings#split-tunnel#heading": "‮Sdʅıʇ‬ ‮⊥nuuǝʅ‬",
       "settings#split-tunnel#help-text": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɹǝbnǝsʇs‬ ‮ɯɐpǝ‬ ‮ʇo‬ ‮sǝɹʌǝɹs‬ ‮ʍıʇɥıu‬ ‮ʎonɹ‬ ‮ɥoɯǝ‬ ‮ɔonuʇɹʎ‬ ‮ʍıʅʅ‬ ‮uoʇ‬ ‮qǝ‬ ‮ʇnuuǝʅǝp‬ ‮ʇɥɹonƃɥ‬ ‮Ԁsıdɥou‬.",
+      "settings#systray-minimize#enable-label": "‮Wıuıɯızǝ‬ ‮ʇo‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬ (‮sʎsʇǝɯ‬ ‮ʇɹɐʎ‬)",
+      "settings#systray-minimize#heading": "‮Wıuıɯızǝ‬ ‮ʇo‬ ‮Noʇıɟıɔɐʇıou‬ ‮∀ɹǝɐ‬ (‮Sʎsʇǝɯ‬ ‮⊥ɹɐʎ‬)",
+      "settings#systray-minimize#help-text": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ʍɥǝu‬ ‮ɯıuıɯızǝp‬ ‮ʇɥǝ‬ ‮Ԁsıdɥou‬ ‮ɐddʅıɔɐʇıou‬ ‮ʍıupoʍ‬ ‮ʍıʅʅ‬ ‮ɥıpǝ‬ ‮ıu‬ ‮ʇɥǝ‬ ‮uoʇıɟıɔɐʇıou‬ ‮ɐɹǝɐ‬ (‮ɐʅso‬ ‮ʞuoʍu‬ ‮ɐs‬ ‮ʇɥǝ‬ “‮sʎsʇǝɯ‬ ‮ʇɹɐʎ‬” ‮oɹ‬ “‮sʎsʇɹɐʎ‬”, ‮ʅoɔɐʇǝp‬ ‮uǝɐɹ‬ ‮ʇɥǝ‬ ‮ɔʅoɔʞ‬ ‮ou‬ ‮ʎonɹ‬ ‮Ｍıupoʍs‬ ‮ʇɐsʞ‬ ‮qɐɹ‬).",
       "settings#transport-mode#check-label": "‮∩sǝ‬ ‮ɅԀN‬ ‮Wopǝ‬",
       "settings#transport-mode#heading": "‮⊥ɹɐusdoɹʇ‬ ‮Wopǝ‬",
       "settings#transport-mode#help-text": "‮∩sǝs‬ ‮Ｍıupoʍs‬ ‮IԀSǝɔ‬/‮˥‬2‮⊥Ԁ‬ ‮ɅԀN‬. ‮⊥ɥıs‬ ‮ɯopǝ‬ ‮ʍıʅʅ‬ ‮ʇnuuǝʅ‬ ‮ɐʅʅ‬ ‮ʎonɹ‬ ‮ɐdds‬, ‮qnʇ‬ ‮ıʇ‬ ‮poǝsu‬'‮ʇ‬ ‮dɹoʌıpǝ‬ ‮oqɟnsɔɐʇıou‬. ‮Iʇ‬ ‮ıs‬ <strong>‮uoʇ‬ ‮ɹǝɔoɯɯǝupǝp‬</strong> ‮ɟoɹ‬ ‮qʎdɐssıuƃ‬ ‮ɯosʇ‬ ‮ɟıɹǝʍɐʅʅs‬.",
@@ -12189,6 +12195,9 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "settings#transport-mode#heading": "Transport Mode",
       "settings#transport-mode#check-label": "Use VPN Mode",
       "settings#transport-mode#help-text": "Uses Windows IPSec/L2TP VPN. This mode will tunnel all your apps, but it doesn't provide obfuscation. It is <strong>not recommended</strong> for bypassing most firewalls.",
+      "settings#systray-minimize#heading": "Minimize to Notification Area (System Tray)",
+      "settings#systray-minimize#help-text": "If enabled, when minimized the Psiphon application window will hide in the notification area (also known as the “system tray” or “systray”, located near the clock on your Windows task bar).",
+      "settings#systray-minimize#enable-label": "Minimize to the notification area (system tray)",
       "settings#applying-message": "Reconnecting to apply your settings.",
       "settings#saved-message": "Settings saved.",
       "feedback#top_content_title": "Give Us Your Feedback",
@@ -12213,8 +12222,8 @@ return t.parent().is(".ui-effects-wrapper")&&(t.parent().replaceWith(t),(t[0]===
       "about#get-by-email": "<strong>If the website is inaccessible</strong>, you can get a new version of Psiphon by sending an email to:",
       "general#modal-close-button": "Close",
       "appbackend#state-stopped-title": "Psiphon is disconnected",
-      "appbackend#state-starting-title": "Psiphon is connecting…",
-      "appbackend#state-starting-body": "Please wait",
+      "appbackend#state-starting-title": "Psiphon is connecting",
+      "appbackend#state-starting-body": "Please wait…",
       "appbackend#state-connected-title": "Psiphon is connected",
       "appbackend#state-connected-body": "Explore beyond your borders!",
       "appbackend#minimized-to-systray-title": "Psiphon has been minimized to the notification area",
@@ -13636,6 +13645,7 @@ $(function settingsInit() {
       UpstreamProxyHostname: 'upstreamhost',
       UpstreamProxyPort: 234,
       EgressRegion: 'GB',
+      SystrayMinimize: 0,
       defaults: {
         SplitTunnel: 0,
         VPN: 0,
@@ -13644,7 +13654,8 @@ $(function settingsInit() {
         SkipUpstreamProxy: 0,
         UpstreamProxyHostname: '',
         UpstreamProxyPort: '',
-        EgressRegion: ''
+        EgressRegion: '',
+        SystrayMinimize: 0
       }
     };
   }
@@ -13716,7 +13727,7 @@ function applySettings() {
     return false;
   }
   else if (settingsJSON !== g_initialSettingsJSON) {
-    // Settings have changed -- update them in the application (and trigger a reconnect).
+    // Settings have changed -- update them in the application (and trigger a reconnect, if necessary).
     HtmlCtrlInterface_SaveSettings(settingsJSON);
 
     if (g_lastState === 'starting' || g_lastState === 'connected') {
@@ -13790,6 +13801,10 @@ function fillSettingsValues(obj) {
       'click',
       { ignoreDisabled: true });
   }
+
+  if (typeof(obj.SystrayMinimize) !== 'undefined') {
+    $('#SystrayMinimize').prop('checked', !!obj.SystrayMinimize);
+  }
 }
 
 // Handler for the Reset Settings button
@@ -13820,7 +13835,8 @@ function settingsToJSON() {
     UpstreamProxyHostname: $('#UpstreamProxyHostname').val(),
     UpstreamProxyPort: validatePort($('#UpstreamProxyPort').val()),
     SkipUpstreamProxy: $('#SkipUpstreamProxy').prop('checked') ? 1 : 0,
-    EgressRegion: egressRegion === BEST_REGION_VALUE ? '' : egressRegion
+    EgressRegion: egressRegion === BEST_REGION_VALUE ? '' : egressRegion,
+    SystrayMinimize: $('#SystrayMinimize').prop('checked') ? 1 : 0
   };
 
   return JSON.stringify(returnValue);
@@ -15189,6 +15205,40 @@ window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
           </div>
 
           <div class="accordion" id="settings-accordion">
+
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="#settings-accordion-systray-minimize"
+                   data-toggle="collapse" data-parent="#settings-accordion">
+                  <span data-i18n="settings#systray-minimize#heading">
+                    Minimize to Notification Area (System Tray)
+                  </span>
+                  <i class="accordion-expand-icon icon-chevron-down-square ie7Remove"
+                     data-icon-closed="icon-chevron-down-square" data-icon-opened="icon-chevron-up-square"></i>
+                </a>
+              </div>
+              <div id="settings-accordion-systray-minimize" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  <form>
+                    <fieldset>
+                      <p data-i18n="settings#systray-minimize#help-text">
+                        If enabled, when minimized the Psiphon application window will hide
+                        in the notification area (also known as the "system tray" or "systray",
+                        located near the clock on your Windows task bar).
+                      </p>
+                      <div class="controls checkbox checkbox-primary">
+                        <input type="checkbox" id="SystrayMinimize"/>
+                        <label for="SystrayMinimize">
+                          <span data-i18n="settings#systray-minimize#enable-label">
+                            Minimize to the notification area (system tray)
+                          </span>
+                        </label>
+                      </div>
+                    </fieldset>
+                  </form>
+                </div>
+              </div>
+            </div>
 
             <div class="accordion-group">
               <div class="accordion-heading">
