Main window logo now changes color with connected state

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -75,7 +75,7 @@
   <div class="psiphon-header">
     <div class="header-nav-join logo" data-match-width=".main-nav">
       <a href="#">
-        <img src="logo.png">
+        <img src="logo-bw.png" data-stopped-src="logo-bw.png" data-connected-src="logo.png">
       </a>
     </div>
 
