Fixed bottom of Farsi state text getting cut off on IE7

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -7479,6 +7479,9 @@ hr.dotted {
   border-bottom-style: none;
   border-bottom-width: 0px;
 }
+.slabtextdone .slabtext {
+  line-height: 1.2;
+}
 
 </style>
 
