Move connect box up a bit. Make box center better on higher IE.

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -6985,7 +6985,8 @@ body[dir="rtl"] .main-nav .multiline-tab-icon {
   max-width: 600px;
   position: relative;
   padding: 0;
-  top: 10%;
+  top: 5%;
+  top: calc(50% - 200px);
 }
 #connect-toggle > .connect-toggle-content {
   position: absolute;
