--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -115,7 +115,7 @@
               <i class="icon-spinner6 icon-spin"></i>
             </span>
             <span class="label label-success hidden" data-connect-state="connected">
-              <i class="icon-checkmark-circle" data-i18n-rtl-classes="icon-flip-horizontal"></i>
+              <i class="icon-checkmark-circle"></i>
             </span>
             <span class="label label-important" data-connect-state="stopped">
               <i class="icon-warning"></i>
@@ -206,7 +206,7 @@
                  data-connect-state="connected"
                  data-match-height=".connect-toggle-content" data-match-height-align="bottom">
               <div class="state-symbol">
-                <i class="icon-checkmark-circle icon-state-symbol" data-i18n-rtl-classes="icon-flip-horizontal"></i>
+                <i class="icon-checkmark-circle icon-state-symbol"></i>
               </div>
               <div>
                 <h2 class="slabtext-container">
